argocd/infra/myspeed/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: myspeed
  name: myspeed
spec:
  replicas: 1
  serviceName: myspeed
  selector:
    matchLabels:
      app: myspeed
  template:
    metadata:
      labels:
        app: myspeed
    spec:
      containers:
        - image: harbor.yanello.net/docker/germannewsmaker/myspeed:1.0.9@sha256:3a3e774b3f78d930a5a962d625b99bcb3d71730bfeb4a6b93e04fd38cfe7d9a9
          imagePullPolicy: IfNotPresent
          name: myspeed
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 50Mi
          ports:
            - containerPort: 5216
              protocol: TCP
          volumeMounts:
            - mountPath: /myspeed/data
              name: data
          readinessProbe:
            httpGet:
              path: /
              port: 5216
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5216
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
      restartPolicy: Always
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-ssd-nfs
        resources:
          requests:
            storage: 1Gi
