argocd/infra/myspeed/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myspeed
  name: myspeed
spec:
  ports:
    - name: "http"
      port: 5216
      targetPort: 5216
  selector:
    app: myspeed
