argocd/infra/myspeed/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: MySpeed
    gethomepage.dev/icon: myspeed
    gethomepage.dev/description: "MySpeed is a speed test analysis software that records\
      \ your internet speed for up to 30 days."
    gethomepage.dev/pod-selector: app=myspeed
  labels:
    app.kubernetes.io/instance: myspeed-app
  name: myspeed-http-route
  namespace: myspeed
spec:
  parentRefs:
    - name: cilium-private-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - myspeed.yanello.net
  rules:
    - backendRefs:
        - name: myspeed
          group: ""
          kind: Service
          namespace: myspeed
          port: 5216
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
