argocd/infra/myspeed/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myspeed
spec:
  hosts:
    - myspeed.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: myspeed
            port:
              number: 5216
