argocd/infra/myspeed/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: myspeed
spec:
  endpointSelector:
    matchLabels:
      app: myspeed
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "5216"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "5216"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8080"
              protocol: TCP
    - toEntities:
        - world
      icmps:
        - fields:
            - type: 8
              family: IPv4
